--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://localhost:27017/skillswap
+MONGODB_URI=mongodb+srv://odooHackhaton:aniketdarshankotub@cluster0.wktryri.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3001
